--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta name="HandheldFriendly" content="true" />
 
     <!-- Share en RRSS -->
-
     <meta property="og:title" content="Camping Page Services" />
     <meta property="og:type" content=" Landing Page" />
     <meta property="og:image" content="Camping Page Services" />
@@ -23,13 +22,21 @@
     <meta property="og:description" content="Camping Page Services" />
     <meta property="og:locale" content=" " />
     <meta property="og:site_name" content=" " />
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
+
+    <!-- REMIXICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
 
     <title>Camping Page Services</title>
 </head>
 
 <body>
+    <header class="header" id="header">
 
+    </header>
 </body>
 
 </html>
