--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <meta property="og:site_name" content=" " />
     <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+
     <!-- REMIXICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
 
@@ -37,6 +40,8 @@
     <header class="header" id="header">
 
     </header>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
