load navbar and menu list

--- a/index.html
+++ b/index.html
@@ -33,12 +33,48 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    <title>Camping Page Services</title>
+    <title>Camping Page Services CAMPAO</title>
 </head>
 
 <body>
+    <!--************* HEADER SECTION *************-->
     <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <img src="./assets/img/logo.svg" alt="logo CAMPAO capming services">
+            </a>
 
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Pricing</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Events</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="nav__buttons">
+                    <a href="#" class="nav__button-link">Login</a>
+                    <a href="#" class="nav__button-ghost">Get Started !</a>
+                </div>
+
+                <!-- Close Buttons -->
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-circle-line"></i>
+                </div>
+            </div>
+            <!-- Toggle Buttons -->
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-search-fill"></i>
+            </div>
+        </nav>
     </header>
 
     <script src="./assets/js/main.js"></script>
