load interactivity menu desktop toggle/hidden 14:00

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </nav>
     </header>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
