load styles navbar, home section 21:21min

--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
         </nav>
     </header>
 
+    <!--************* MAIN SECTION *************-->
+    <main class="main">
+        <!-- HOME SECTION -->
+        <section class="home">
+            <div class="home__container container">
+                <div class="home__content">
+                    <div class="home__data">
+                        <h3 class="home__subtitle">
+                            A LITTLE EXPERIENCE
+                        </h3>
+                        <h1 class="home__title">
+                            Camping Events <br>
+                            To Remember
+                        </h1>
+                        <p class="home__description">
+                            Camp anywhere anytime without hassle and enjoy
+                        </p>
+                        <a href="#" class="home__button">
+                            Explore locations
+                        </a>
+                    </div>
+                    <img src="assets/img/bird-1.svg" alt="Bird colors rainbow" class="home__bird-1">
+                    <img src="assets/img/bird-2.svg" alt="Bird colors rainbow" class="home__bird-2">
+                </div>
+                <div class="home__images">
+                    <img src="assets/img/img-4.svg" alt="image sun background" class="home__img-4">
+                    <img src="assets/img/img-3.svg" alt="image trees background" class="home__img-3">
+                    <img src="assets/img/img-2.svg" alt="image tress and valley background" class="home__img-2">
+                    <img src="assets/img/img-1.svg" alt="image camping tent background" class="home__img-1">
+                </div>
+            </div>
+        </section>
+    </main>
+
+
     <script src="assets/js/main.js"></script>
 </body>
 
