load media queries small, taller and medium devices min 24:47

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="home">
             <div class="home__container container">
                 <div class="home__content">
-                    <div class="home__data">
+                    <divi class="home__data">
                         <h3 class="home__subtitle">
                             A LITTLE EXPERIENCE
                         </h3>
@@ -97,7 +97,7 @@
                         <a href="#" class="home__button">
                             Explore locations
                         </a>
-                    </div>
+                    </divi>
                     <img src="assets/img/bird-1.svg" alt="Bird colors rainbow" class="home__bird-1">
                     <img src="assets/img/bird-2.svg" alt="Bird colors rainbow" class="home__bird-2">
                 </div>
